--- a/src/styles/searchBar.css
+++ b/src/styles/searchBar.css
@@ -1,4 +1,104 @@
 .searchBar {
-  background-color: chocolate;
-  border: 1px solid khaki;
+  background-color: white;
+  border-radius: 1rem;
+}
+
+form {
+  /* border: 3px solid sienna; */
+  height: 100%;
+  width: 80%;
+  margin: 0.25rem auto;
+}
+form > input {
+  height: 80%;
+  width: 80%;
+  /* border: none; */
+  border-radius: 0.8rem;
+  font-size: 1.1rem;
+  font-family: var(--teko);
+  font-weight: 600;
+  opacity: 0.6;
+  padding-left: 1rem;
+}
+form > input > :active {
+  border: 3px solid black;
+  border-radius: 0.8rem;
+}
+form > a > button {
+  height: 70%;
+  width: 10%;
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+  /* border: 1px solid; */
+  border: none;
+  margin-left: 0.2rem;
+  background-color: lightgray;
+  transition: box-shadow 1s ease-in-out;
+}
+form > a > button:hover {
+  box-shadow: 1px 1px 1px 30px silver;
+}
+.coinPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  /* border: 1px solid black; */
+  height: 100vh;
+  background-color: rgb(4, 13, 18);
+}
+.coinPage > h1 {
+  font-family: var(--honk);
+  /* text-decoration: underline; */
+}
+.coinPage > img {
+  transition: box-shadow 2s ease-in-out, transform 1s ease-in-out;
+  /* border: 1px solid; */
+  border-radius: 100%;
+  border: none;
+}
+.coinPage > img:hover {
+  /* box-shadow: 1px 1px 100px gray; */
+  transform: rotateX(20deg);
+  transform: rotateX(-20deg);
+
+  cursor: pointer;
+}
+.coinPage > h3 {
+  font-family: var(--honk);
+  font-size: 1.4rem;
+}
+.coinPage > a {
+  font-size: 1.3rem;
+  text-decoration: none;
+  border-radius: 1rem;
+  color: rgb(27, 26, 26);
+  font-family: var(--honk);
+  padding: 0.3rem;
+  margin-top: 4rem;
+  transition: all 0.8s ease-in-out;
+}
+.coinPage > a:hover {
+  box-shadow: 1px 1px 30px yellow;
+}
+.errorSearch {
+  /* border: 1px solid; */
+  display: flex;
+  margin-top: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
+  gap: 1.3rem;
+  font-family: var(--overpass);
+}
+.errorSearch > a {
+  text-decoration: none;
+  color: black;
+  font-family: var(--teko);
+  font-size: 1.2rem;
+  /* border-bottom: 1px solid; */
+  text-decoration: underline;
 }
