--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,12 @@
 .dashBoardGrid {
   background-color: rgb(238, 238, 238);
   height: 90vh;
-  width: 100%;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
-  gap: 1rem;
+  width: 96%;
+  margin: 5vh 2rem;
+  /* margin-right: 1rem; */
   display: grid;
   grid: 1fr 4fr 2fr/1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 0.7rem;
 }
 .searchBar {
   grid-area: 1/2/2/5;
@@ -20,4 +20,7 @@
 }
 .portfolio {
   grid-area: 3/1/4/3;
+}
+.mainGraph {
+  grid-area: 2/1/3/5;
 }
